--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
 									            <!-- Progress -->
 									            <div class="progress">
                                                     <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
-											            <div class="progress-text"><span>.Net CORE</span><span>80%</span></div>
+											            <div class="progress-text"><span>.Net Core</span><span>80%</span></div>
 											        </div>
 											        <div class="progress-text"><span>.NET CORE</span></div>
                                                 </div>
