--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 						<svg class="avatar avatar--180" viewBox="0 0 188 188">
                             <g class="avatar__box">
 							    <use xlink:href="#rect" stroke-width="2" stroke="black"/>
-                                <image xlink:href="assets/img/avatar2.png" height="100%" width="100%" />
+                                <image xlink:href="assets/img/avatar2.jpg" height="100%" width="100%" />
                             </g>
                         </svg>
 						<div class="text-center">
