--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 								            <div class="case-item box box__second">
 									            <img class="case-item__icon" src="assets/icons/icon-maintenance.svg" alt="" />
 										        <div>
-									                <h3 class="title title--h5">Maintenence</h3>
+									                <h3 class="title title--h5">Maintenance</h3>
 										            <p class="case-item__caption">Solving any problem related to web sites and software projects.</p>
 										        </div>
 									        </div>
